--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/yargs": "^17.0.35",
     "nodemon": "^3.1.11",
     "rimraf": "^6.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "yargs": "^18.0.0"
   }
 }
